# qr-generator

./: .gitignore  LICENSE  README.md  Software_Usage_Declaration.html  Software_Usage_Declaration_zh.html  index.html  package-lock.json  package.json  vite.config.ts
src/: index.html  main.js  main.ts  styles.css
src-tauri/: .gitattributes  Cargo.toml  installer.nsh  installer.wxs  tauri.conf.json
src-tauri/icons/: icon.xcf
src-tauri/src/: main.rs
