[package]
name = "qr-generator"
version = "1.0.3"
description = "签到码生成器"
authors = ["LoopyBrainie@Brra1n0"]
license = "../LICENSE"
repository = "https://github.com/LoopyBrainie/qr-generator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
