[package]
name = "qr-generator"
version = "1.1.0"
description = "签到码生成器"
authors = ["LoopyBrainie@Brra1n0"]
license = "../LICENSE"
repository = "https://github.com/LoopyBrainie/qr-generator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
num-bigint = "0.4"
num-traits = "0.2"

[features]
default = []
